...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPlantsActivity">

    <!--        app:layout_constraintTop_toBottomOf="@+id/actPlantName" />-->

    <AutoCompleteTextView
        android:id="@+id/actPlantName"
        android:layout_width="403dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:hint="Plant Name"
        app:layout_constraintBottom_toTopOf="@+id/btnSearchPlant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

...
